# option_selling

./: .dockerignore  .gitignore  Dockerfile  db.sql  docker-compose.yml  import_universe.py  pyproject.toml  requirements.txt
options_selling/: schedual.py
options_selling/config/: constants.py
options_selling/data/: IB_historical.py  calculate_HV.py  calculate_POP.py  db_connect.py  db_operations.py  get_option_IV_greeks.py  iv_ranking.py  options_chain.py  save_options_data.py  track_vix.py
options_selling/orders/: iron_condor.py  orders.py
options_selling/services/: calcualte_historical_IV.py  sell_iron_condors.py
service_name/: .env
service_name/util/: discord_notify.py
