[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "options-selling"
version = "0.1.0"
description = "Options selling strategies and utilities"
requires-python = ">=3.10"
dependencies = []
 
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
 
[tool.hatch.build.targets.wheel]
packages = [
    "options_selling",
    "options_selling/config",
    "options_selling/data",
    "options_selling/orders",
    "options_selling/services",
]
 
[tool.pytest.ini_options]
testpaths = ["tests"]